--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "server": "nodemon index.js"
+    "client": "npm run start --prefix front",
+    "server": "nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "node index.js"
   },
   "author": "AY",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
