--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "lowdb": "^1.0.0",
     "shortid": "^2.2.16"
   },
