--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cards Portal",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha",
     "client": "npm run start --prefix front",
     "server": "nodemon index.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
@@ -20,7 +20,15 @@
     "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "jest": "^29.3.1",
+    "mocha": "^8.0.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
