--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "concurrently": "^7.6.0",
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.3.1",
     "mocha": "^8.0.0",
     "nodemon": "^2.0.20",
