--- a/front/package.json
+++ b/front/package.json
@@ -53,5 +53,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "jest":{
+    "transformIgnorePatterns":  ["node_modules/(?!axios)/"]
   }
 }
